# mergemate

./: .gitignore  README.md  pyproject.toml
docs/: build-planner-algorithm.md
docs/adr/: 001-scope-and-stack.md  002-ephemeral-worker-safety.md
forge_analysis/: __init__.py  analyzer.py  failure_summary.py  patterns.py
forge_api/: __init__.py  app.py  main.py  models.py  repository.py
forge_orchestrator/: __init__.py  orchestrator.py  reaper.py  worker.py
forge_planner/: __init__.py  changeset.py  cli.py  dependency_graph.py  impact.py  planner.py  pom_parser.py
forge_spi/: __init__.py  context.py  result.py  step.py
forge_spi/plugins/: __init__.py  git_plugin.py  maven_plugin.py
forge_worker/: Dockerfile  __init__.py  git_guard.py  lifecycle.py
mergemate/: __init__.py
mergemate/cli/: analyze_cmd.py  main.py
mergemate/config/: loader.py
mergemate/domain/: models.py
mergemate/execution/: adapter.py  current_workspace.py  docker_adapter.py  local_worktree.py  runner.py
mergemate/git/: cochange.py  diff.py  worktree.py
mergemate/impact/: __init__.py  analyzer.py  file_mapper.py  module_graph.py  risk.py
mergemate/java_analysis/: __init__.py  class_graph.py  (+3 more)
tests/: test_analysis.py  test_api.py  test_api_analyze.py  test_api_async.py  test_cochange.py  test_docker_adapter.py  test_e2e.py  test_git_guard.py  test_java_analysis.py  test_lifecycle.py  test_lifecycle_fix.py  test_mergemate_phase1.py  test_mergemate_phase2.py  test_orchestrator.py  test_phase4.py  test_planner.py  test_reporting.py  test_spi.py
web/: index.html  package.json
(+32 files in other folders)
